Add or del some page

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html style="height: 100%">
 <head>
     <meta charset="utf-8">
-    <title>Redis Client</title>
+    <title>RCA</title>
 </head>
 <body style="height: 100%"> <!-- 可拖拽 -->
 <div id="app"></div>
