--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>RCA</title>
 </head>
-<body style="height: 100%"> <!-- 可拖拽 -->
+<body style="height: 100%; overflow: hidden"> <!-- 可拖拽 -->
 <div id="app"></div>
 </body>
 
