恢复Windows版本taskbar显示

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html style="height: 100%">
 <head>
     <meta charset="utf-8">
-    <title>Redis Client [Main]</title>
+    <title>Redis Client Application</title>
 </head>
 <body style="height: 100%; overflow: hidden"> <!-- 可拖拽 -->
 <div id="app"></div>
